fix squares not squaring on firefox

--- a/index.css
+++ b/index.css
@@ -53,7 +53,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .field table {
-	width: fit-content;
 	padding: 16px;
 	border-spacing: 8px;
 	table-layout: fixed;
